random add & fix