@@ -26,176 +26,158 @@ import java.util.Collections;
 import java.util.Map;
 import java.util.Objects;
 import java.util.function.Consumer;
-public abstract class SpaceSuit extends ArmorItem {
+public abstract class SpaceSuit extends ArmorItem{
 	String texture="dif:textures/models/armor/spacesuit.png";
-	public SpaceSuit(Type type,Properties properties) {
-		super(new ArmorMaterial() {
+	public SpaceSuit(Type type,Properties properties){
+		super(new ArmorMaterial(){
 			@Override
-			public int getDurabilityForType(@NotNull Type type) {
-				return new int[]{13, 15, 16, 11}[type.getSlot().getIndex()] * 37;
+			public int getDurabilityForType(@NotNull Type type){
+				return new int[]{13,15,16,11}[type.getSlot().getIndex()]*37;
 			}
-
 			@Override
-			public int getDefenseForType(@NotNull Type type) {
-				return new int[]{3, 6, 8, 3}[type.getSlot().getIndex()];
+			public int getDefenseForType(@NotNull Type type){
+				return new int[]{3,6,8,3}[type.getSlot().getIndex()];
 			}
-
 			@Override
-			public int getEnchantmentValue() {
+			public int getEnchantmentValue(){
 				return 12;
 			}
-
 			@Override
-			public @NotNull SoundEvent getEquipSound() {
+			public @NotNull SoundEvent getEquipSound(){
 				return Objects.requireNonNull(ForgeRegistries.SOUND_EVENTS.getValue(ResourceLocation.fromNamespaceAndPath("minecraft","item.armor.equip_iron")));
 			}
-
 			@Override
-			public @NotNull Ingredient getRepairIngredient() {
+			public @NotNull Ingredient getRepairIngredient(){
 				return Ingredient.of();
 			}
-
 			@Override
-			public @NotNull String getName() {
+			public @NotNull String getName(){
 				return "space_suit";
 			}
-
 			@Override
-			public float getToughness() {
+			public float getToughness(){
 				return 2f;
 			}
-
 			@Override
-			public float getKnockbackResistance() {
+			public float getKnockbackResistance(){
 				return 0f;
 			}
-		}, type, properties);
+		},type,properties);
 	}
-
-	public static class Helmet extends SpaceSuit {
-		public Helmet() {
-			super(Type.HELMET, new Properties());
+	public static class Helmet extends SpaceSuit{
+		public Helmet(){
+			super(Type.HELMET,new Properties());
 		}
-
 		@Override
-		public void initializeClient(Consumer<IClientItemExtensions> consumer) {
-			consumer.accept(new IClientItemExtensions() {
+		public void initializeClient(Consumer<IClientItemExtensions> consumer){
+			consumer.accept(new IClientItemExtensions(){
 				@Override
-				public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
-					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
-							Map.of("head", new ModelSpaceHelmet(Minecraft.getInstance().getEntityModels().bakeLayer(ModelSpaceHelmet.LAYER_LOCATION)).Head,
-									"hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
-									"body", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
-									"right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
-									"left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
-									"right_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
-									"left_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
-					armorModel.crouching = living.isShiftKeyDown();
-					armorModel.riding = defaultModel.riding;
-					armorModel.young = living.isBaby();
-					return armorModel;
-				}
-			});
-		}
-
-		@Override
-		public String getArmorTexture(ItemStack stack, Entity entity, EquipmentSlot slot, String type) {
-			return texture;
-		}
-	}
-
-	public static class Chestplate extends SpaceSuit {
-		public Chestplate() {
-			super(Type.CHESTPLATE, new Properties());
-		}
-
-		@Override
-		public void initializeClient(Consumer<IClientItemExtensions> consumer) {
-			consumer.accept(new IClientItemExtensions() {
-				@Override
-				@OnlyIn(Dist.CLIENT)
-				public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
-					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
-							Map.of("body", new ModelSpaceChestplate(Minecraft.getInstance().getEntityModels().bakeLayer(ModelSpaceChestplate.LAYER_LOCATION)).Body,
-									"left_arm", new ModelSpaceChestplate(Minecraft.getInstance().getEntityModels().bakeLayer(ModelSpaceChestplate.LAYER_LOCATION)).LeftArm,
-									"right_arm", new ModelSpaceChestplate(Minecraft.getInstance().getEntityModels().bakeLayer(ModelSpaceChestplate.LAYER_LOCATION)).RightArm,
-									"head", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
-									"hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
-									"right_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
-									"left_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
-					armorModel.crouching = living.isShiftKeyDown();
-					armorModel.riding = defaultModel.riding;
-					armorModel.young = living.isBaby();
-					return armorModel;
-				}
-			});
-		}
-
-		@Override
-		public String getArmorTexture(ItemStack stack, Entity entity, EquipmentSlot slot, String type) {
-			return texture;
-		}
-	}
-
-	public static class Leggings extends SpaceSuit {
-		public Leggings() {
-			super(Type.LEGGINGS, new Properties());
-		}
-
-		@Override
-		public void initializeClient(Consumer<IClientItemExtensions> consumer) {
-			consumer.accept(new IClientItemExtensions() {
-				@Override
-				@OnlyIn(Dist.CLIENT)
-				public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
-					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
-							Map.of("left_leg", new ModelSpaceLeggings(Minecraft.getInstance().getEntityModels().bakeLayer(ModelSpaceLeggings.LAYER_LOCATION)).LeftLeg,
-									"right_leg", new ModelSpaceLeggings(Minecraft.getInstance().getEntityModels().bakeLayer(ModelSpaceLeggings.LAYER_LOCATION)).RightLeg,
-									"head", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
-									"hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
-									"left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
-					armorModel.crouching = living.isShiftKeyDown();
-					armorModel.riding = defaultModel.riding;
-					armorModel.young = living.isBaby();
+				public @NotNull HumanoidModel getHumanoidArmorModel(LivingEntity living,ItemStack stack,EquipmentSlot slot,HumanoidModel defaultModel){
+					HumanoidModel armorModel=new HumanoidModel(new ModelPart(Collections.emptyList(),
+							Map.of("head",new ModelSpaceHelmet(Minecraft.getInstance().getEntityModels().bakeLayer(ModelSpaceHelmet.LAYER_LOCATION)).Head,
+									"hat",new ModelPart(Collections.emptyList(),Collections.emptyMap()),
+									"body",new ModelPart(Collections.emptyList(),Collections.emptyMap()),
+									"right_arm",new ModelPart(Collections.emptyList(),Collections.emptyMap()),
+									"left_arm",new ModelPart(Collections.emptyList(),Collections.emptyMap()),
+									"right_leg",new ModelPart(Collections.emptyList(),Collections.emptyMap()),
+									"left_leg",new ModelPart(Collections.emptyList(),Collections.emptyMap()))));
+					armorModel.crouching=living.isShiftKeyDown();
+					armorModel.riding=defaultModel.riding;
+					armorModel.young=living.isBaby();
 					return armorModel;
 				}
 			});
 		}
 		@Override
-		public String getArmorTexture(ItemStack stack, Entity entity, EquipmentSlot slot, String type) {
+		public String getArmorTexture(ItemStack stack,Entity entity,EquipmentSlot slot,String type){
 			return texture;
 		}
 	}
-
-	public static class Boots extends SpaceSuit {
-		public Boots() {
-			super(Type.BOOTS, new Properties());
+	public static class Chestplate extends SpaceSuit{
+		public Chestplate(){
+			super(Type.CHESTPLATE,new Properties());
 		}
-
 		@Override
-		public void initializeClient(Consumer<IClientItemExtensions> consumer) {
-			consumer.accept(new IClientItemExtensions() {
+		public void initializeClient(Consumer<IClientItemExtensions> consumer){
+			consumer.accept(new IClientItemExtensions(){
 				@Override
 				@OnlyIn(Dist.CLIENT)
-				public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
-					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
+				public @NotNull HumanoidModel getHumanoidArmorModel(LivingEntity living,ItemStack stack,EquipmentSlot slot,HumanoidModel defaultModel){
+					HumanoidModel armorModel=new HumanoidModel(new ModelPart(Collections.emptyList(),
+							Map.of("body",new ModelSpaceChestplate(Minecraft.getInstance().getEntityModels().bakeLayer(ModelSpaceChestplate.LAYER_LOCATION)).Body,
+									"left_arm",new ModelSpaceChestplate(Minecraft.getInstance().getEntityModels().bakeLayer(ModelSpaceChestplate.LAYER_LOCATION)).LeftArm,
+									"right_arm",new ModelSpaceChestplate(Minecraft.getInstance().getEntityModels().bakeLayer(ModelSpaceChestplate.LAYER_LOCATION)).RightArm,
+									"head",new ModelPart(Collections.emptyList(),Collections.emptyMap()),
+									"hat",new ModelPart(Collections.emptyList(),Collections.emptyMap()),
+									"right_leg",new ModelPart(Collections.emptyList(),Collections.emptyMap()),
+									"left_leg",new ModelPart(Collections.emptyList(),Collections.emptyMap()))));
+					armorModel.crouching=living.isShiftKeyDown();
+					armorModel.riding=defaultModel.riding;
+					armorModel.young=living.isBaby();
+					return armorModel;
+				}
+			});
+		}
+		@Override
+		public String getArmorTexture(ItemStack stack,Entity entity,EquipmentSlot slot,String type){
+			return texture;
+		}
+	}
+	public static class Leggings extends SpaceSuit{
+		public Leggings(){
+			super(Type.LEGGINGS,new Properties());
+		}
+		@Override
+		public void initializeClient(Consumer<IClientItemExtensions> consumer){
+			consumer.accept(new IClientItemExtensions(){
+				@Override
+				@OnlyIn(Dist.CLIENT)
+				public @NotNull HumanoidModel getHumanoidArmorModel(LivingEntity living,ItemStack stack,EquipmentSlot slot,HumanoidModel defaultModel){
+					HumanoidModel armorModel=new HumanoidModel(new ModelPart(Collections.emptyList(),
+							Map.of("left_leg",new ModelSpaceLeggings(Minecraft.getInstance().getEntityModels().bakeLayer(ModelSpaceLeggings.LAYER_LOCATION)).LeftLeg,
+									"right_leg",new ModelSpaceLeggings(Minecraft.getInstance().getEntityModels().bakeLayer(ModelSpaceLeggings.LAYER_LOCATION)).RightLeg,
+									"head",new ModelPart(Collections.emptyList(),Collections.emptyMap()),
+									"hat",new ModelPart(Collections.emptyList(),Collections.emptyMap()),"body",new ModelPart(Collections.emptyList(),Collections.emptyMap()),"right_arm",new ModelPart(Collections.emptyList(),Collections.emptyMap()),
+									"left_arm",new ModelPart(Collections.emptyList(),Collections.emptyMap()))));
+					armorModel.crouching=living.isShiftKeyDown();
+					armorModel.riding=defaultModel.riding;
+					armorModel.young=living.isBaby();
+					return armorModel;
+				}
+			});
+		}
+		@Override
+		public String getArmorTexture(ItemStack stack,Entity entity,EquipmentSlot slot,String type){
+			return texture;
+		}
+	}
+	public static class Boots extends SpaceSuit{
+		public Boots(){
+			super(Type.BOOTS,new Properties());
+		}
+		@Override
+		public void initializeClient(Consumer<IClientItemExtensions> consumer){
+			consumer.accept(new IClientItemExtensions(){
+				@Override
+				@OnlyIn(Dist.CLIENT)
+				public @NotNull HumanoidModel getHumanoidArmorModel(LivingEntity living,ItemStack stack,EquipmentSlot slot,HumanoidModel defaultModel){
+					HumanoidModel armorModel=new HumanoidModel(new ModelPart(Collections.emptyList(),
 							Map.of("left_leg",new ModelSpaceBoots(Minecraft.getInstance().getEntityModels().bakeLayer(ModelSpaceBoots.LAYER_LOCATION)).LeftLeg,
 									"right_leg",new ModelSpaceBoots(Minecraft.getInstance().getEntityModels().bakeLayer(ModelSpaceBoots.LAYER_LOCATION)).RightLeg,
-									"head",new ModelPart(Collections.emptyList(), Collections.emptyMap()),
-									"hat",new ModelPart(Collections.emptyList(), Collections.emptyMap()),
-									"body", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
-									"right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
-									"left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
-					armorModel.crouching = living.isShiftKeyDown();
-					armorModel.riding = defaultModel.riding;
-					armorModel.young = living.isBaby();
+									"head",new ModelPart(Collections.emptyList(),Collections.emptyMap()),
+									"hat",new ModelPart(Collections.emptyList(),Collections.emptyMap()),
+									"body",new ModelPart(Collections.emptyList(),Collections.emptyMap()),
+									"right_arm",new ModelPart(Collections.emptyList(),Collections.emptyMap()),
+									"left_arm",new ModelPart(Collections.emptyList(),Collections.emptyMap()))));
+					armorModel.crouching=living.isShiftKeyDown();
+					armorModel.riding=defaultModel.riding;
+					armorModel.young=living.isBaby();
 					return armorModel;
 				}
 			});
 		}
-
 		@Override
-		public String getArmorTexture(ItemStack stack, Entity entity, EquipmentSlot slot, String type) {
+		public String getArmorTexture(ItemStack stack,Entity entity,EquipmentSlot slot,String type){
 			return texture;
 		}
 	}
